--- a/project_website/index.html
+++ b/project_website/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ReadySet Inventory Management</title>
+    <title>ReadySet Project Management</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <div class="container">
       <div class="header">
-        <h1>ReadySet Inventory Management</h1>
+        <h1>ReadySet Project Management</h1>
       </div>
       <div class="section">
         <h2>Project Goals</h2>
