--- a/project_website/index.html
+++ b/project_website/index.html
@@ -14,6 +14,12 @@
         <p>Provide a centralized website that can be accessed by anyone at the company and contains useful and organized information about various projects that people at the company are working on. Users should be able to add projects, view projects, search project, make new projects from a template, create templates, export templates, export projects, export all projects, among other things.</p>
       </div>
       <div class="section">
+        <h2>Project Video</h2>
+        <div class="videowrapper">
+          <iframe align="center" width="560" height="315" src="https://www.youtube.com/embed/totbSvQtqRc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="section">
         <h2>Approach</h2>
         <p>My team collaborated remotely and in person. We used Jira to keep us on task, and manage our progress throughout our sprints. We met three times a week at minimum and sometimes more to troubleshoot specific issues. At every meeting we gave updates on our progress, talked about our troubles, and focused on what we would do for next time. We communicated on Discord and via text message when urgent.</p>
       </div>
